<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:background="@color/black">


    <LinearLayout
        android:id="@+id/LinearLayout"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#abcdef"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

    <TextView
        android:id="@+id/serialTextView"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:text="@string/Rank_Text"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/coinNamesTextView"
        android:layout_weight="1"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/cryptoCoin_Text"
        android:textColor="#020930"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/coinSymbolTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbol_Text"
        android:layout_weight="0.7"
        android:textStyle="bold"
        android:textColor="#020930" />

        <TextView
            android:id="@+id/isActiveTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:paddingEnd="5dp"
            android:text="@string/isActive_Text"
            android:gravity="end"
            android:textColor="#43A047"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry"/>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/LinearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"


        />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>