<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#abcdef">

    <TextView
        android:id="@+id/CryptoCoinsTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_of_all_cryptocurrency_Text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/recyclerView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/horizontalLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#612D7BB6"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/CoinRanking_Text"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="@string/coins_name_Text"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/symbol_text"
                android:layout_gravity="center"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/coin_is_active_text"
                android:layout_gravity="center"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />


        </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CryptoCoinsTV"
        tools:listitem="@layout/itemview"
        android:background="#abcdef"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>